--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "nodemon": "^3.1.10",
     "stripe": "^18.2.1",
     "zod": "^3.25.56"
   }
